--- a/packages/server/src/index.html
+++ b/packages/server/src/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="logo.svg" />
-    <title>Portal</title>
-    <script type="module" src="./main.tsx" async></script>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/svg+xml" href="logo.svg" />
+  <title>Portal</title>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-GYHERFF9X1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-GYHERFF9X1');
+  </script>
+  <script type="module" src="./main.tsx" async></script>
+</head>
+
+<body>
+  <div id="root"></div>
+</body>
+
 </html>
