--- a/packages/server/src/index.html
+++ b/packages/server/src/index.html
@@ -6,6 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/svg+xml" href="logo.svg" />
   <title>Portal</title>
+
+  <!-- Use fonts here instead of in globals.css (fixes HMR issue) -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+
+  <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-GYHERFF9X1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -14,6 +21,8 @@
 
     gtag('config', 'G-GYHERFF9X1');
   </script>
+
+  <!-- Main script -->
   <script type="module" src="./main.tsx" async></script>
 </head>
 
